--- a/.github/workflows/TypeForm.yml
+++ b/.github/workflows/TypeForm.yml
@@ -45,3 +45,5 @@ jobs:
         with:
          name: reports
          path: reports
+         CYPRESS_RECORD_KEY: ${{ secrets.TYPEFORM_ACCESS_TOKEN }}
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
