--- a/.github/workflows/TypeForm.yml
+++ b/.github/workflows/TypeForm.yml
@@ -34,7 +34,8 @@ jobs:
         run: pip install robotframework-requests
       - name: Run a one-line script
         run: pip install robotframework
-        env: ${{ secrets.TYPEFORM_ACCESS_TOKEN }}
+        env: 
+          TYPEFORM_ACCESS_TOKEN: ${{ secrets.TYPEFORM_ACCESS_TOKEN }}
       - name: executa
         run: robot -d ./reports test.robot
       - name: Make Directory for results
