--- a/.github/workflows/TypeForm.yml
+++ b/.github/workflows/TypeForm.yml
@@ -34,8 +34,6 @@ jobs:
         run: pip install robotframework-requests
       - name: Run a one-line script
         run: pip install robotframework
-        env: 
-          TYPEFORM_ACCESS_TOKEN: ${{env.TYPEFORM_ACCESS_TOKEN }}
       - name: executa
         run: robot -d ./reports test.robot
       - name: Make Directory for results
@@ -46,5 +44,5 @@ jobs:
         with:
          name: reports
          path: reports
-         CYPRESS_RECORD_KEY: ${{ secrets.TYPEFORM_ACCESS_TOKEN }}
+         CYPRESS_RECORD_KEY: ${Cypress.env('TYPEFORM_ACCESS_TOKEN')}
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
