--- a/.github/workflows/TypeForm.yml
+++ b/.github/workflows/TypeForm.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: |$
+        run: |
           python -m pip install --upgrade pip
       - uses: actions/checkout@v2
       - name: Requests
