--- a/.github/workflows/TypeForm.yml
+++ b/.github/workflows/TypeForm.yml
@@ -37,7 +37,7 @@ jobs:
         env:
           TYPEFORM_ACCESS_TOKEN: ${(secrets.TYPEFORM_ACCESS_TOKEN)}
       - name: executa
-        run: echo ${(secrets.TYPEFORM_ACCESS_TOKEN)}
+        run: echo $TYPEFORM_ACCESS_TOKEN
       - name: executa
         run: robot -d ./reports test.robot
       - name: Make Directory for results
@@ -48,5 +48,5 @@ jobs:
         with:
          name: reports
          path: reports
-         CYPRESS_RECORD_KEY: ${(secrets.TYPEFORM_ACCESS_TOKEN)}
+         TYPEFORM_ACCESS_TOKEN: ${(secrets.TYPEFORM_ACCESS_TOKEN)}
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
