--- a/.github/workflows/TypeForm.yml
+++ b/.github/workflows/TypeForm.yml
@@ -37,7 +37,7 @@ jobs:
         env:
           TYPEFORM_ACCESS_TOKEN: ${(secrets.TYPEFORM_ACCESS_TOKEN)}
       - name: executa
-        run: echo $TYPEFORM_ACCESS_TOKEN
+        run: cat  $TYPEFORM_ACCESS_TOKEN
       - name: executa
         run: robot -d ./reports test.robot
       - name: Make Directory for results
