--- a/.github/workflows/TypeForm.yml
+++ b/.github/workflows/TypeForm.yml
@@ -27,15 +27,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
+        run: python -m pip install --upgrade pip
       - uses: actions/checkout@v2
       - name: Requests
         run: pip install robotframework-requests
       - name: Run a one-line script
         run: pip install robotframework
-        env:
-          TYPEFORM_ACCESS_TOKEN: ${(secrets.TYPEFORM_ACCESS_TOKEN)}
       - name: executa
         run: |
          echo "This is a secret value: $TYPEFORM_ACCESS_TOKEN"
