--- a/.github/workflows/TypeForm.yml
+++ b/.github/workflows/TypeForm.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Run a one-line script
         run: pip install robotframework
       - name: executa
-        run: robot -d ./reports -v H:ACCESS_TOKEN test.robot
+        run: robot -d ./reports -v ACCESS_TOKEN:ACCESS_TOKEN test.robot
       - name: Make Directory for results
         run: mkdir -p reports
       - name: Upload test results
