--- a/.github/workflows/TypeForm.yml
+++ b/.github/workflows/TypeForm.yml
@@ -43,5 +43,5 @@ jobs:
         with:
          name: reports
          path: reports
-         secret: ${(secrets.ACCESS_TOKEN)}
+         SECRET: ${(secrets.secret)}
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
