--- a/.github/workflows/TypeForm.yml
+++ b/.github/workflows/TypeForm.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          token: ${{ secrets.GH_TOKEN }}
       - name: Install dependencies
         run: python -m pip install --upgrade pip
       - uses: actions/checkout@v2
