--- a/.github/workflows/TypeForm.yml
+++ b/.github/workflows/TypeForm.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Run a one-line script
         run: pip install robotframework
       - name: executa
-        run: robot -d ./reports -v SECRET:TYPEFORM_ACCESS_TOKEN test.robot
+        run: robot -d ./reports -e SECRET:TYPEFORM_ACCESS_TOKEN test.robot
       - name: Make Directory for results
         run: mkdir -p reports
       - name: Upload test results
